Add Custom Attributes DropDowns Validation support

--- a/src/ggrc/assets/mustache/components/assessment/controls-toolbar/controls-toolbar.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/controls-toolbar/controls-toolbar.mustache
@@ -4,7 +4,7 @@
 }}
 <button class="btn btn-small btn-draft btn-extra-gray" ($click)="showRelatedResponses" title="Show Related Assessments">Related Assessments</button>
 <auto-save-form-actions
-  {(form-edit-mode)}="formState.editMode"
+  {(form-edit-mode)}="editMode"
   {form-saving}="formState.saving"
   {form-fields-to-save-available}="formState.fieldsToSaveAvailable"
   (on-save)="onFormSave()"
