--- a/src/ggrc/assets/stylesheets/components/mapped-objects/_mapped-objects.scss
+++ b/src/ggrc/assets/stylesheets/components/mapped-objects/_mapped-objects.scss
@@ -88,6 +88,7 @@ assessment-mapped-controls, assessment-mapped-related-information {
 }
 
 .document-object-item {
+  cursor: default;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -117,13 +118,14 @@ assessment-mapped-controls, assessment-mapped-related-information {
 
     .link {
       line-height: 20px;
-      display: block;
+      cursor: pointer;
       max-width: 100%;
       overflow: hidden;
       text-overflow: ellipsis;
     }
 
     .date {
+      display: block;
       color: #999;
       line-height: 16px;
       font-size: 11px;
@@ -132,10 +134,17 @@ assessment-mapped-controls, assessment-mapped-related-information {
   }
 }
 .comment-object-item {
+  display: block;
+  margin: 0 0 16px 0;
+
   .comment-list__ca-description {
+    font-size: 11px;
+    color: #333;
+    font-weight: bold;
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-transform: uppercase;
     box-sizing: border-box;
     line-height: 20px;
     max-height: 20px;
@@ -146,15 +155,15 @@ assessment-mapped-controls, assessment-mapped-related-information {
     flex-direction: row;
 
     .comment-object-item__author_info {
-      font-size: 12px;
+      font-size: 11px;
       font-style: italic;
       color: #999;
     }
 
     person-list-item {
-      font-size: 13px;
-      font-style: normal;
-      margin: 0 8px 0 0;
+      font-size: 11px;
+      font-style: italic;
+      margin: 0 6px 0 0;
     }
   }
   .comment-object-item__text {
