--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
@@ -30,7 +30,7 @@
       {{/if}}
       {{#unless validation.valid}}
         <div class="form-field__validation-hint-placeholder">
-            <button class="btn btn-link" ($click)="showRequiredInfoModal(%context)">Add required info</button>
+            <button class="btn btn-link btn-link-nopadding" ($click)="showRequiredInfoModal(%context)">Add required info</button>
         </div>
       {{/unless}}
     </div>
