--- a/src/ggrc/assets/mustache/components/mapped-objects/mapped-objects.mustache
+++ b/src/ggrc/assets/mustache/components/mapped-objects/mapped-objects.mustache
@@ -6,5 +6,5 @@
     <content/>
 </object-list>
 {{#if requireLimit}}
-    <button class="btn btn-small btn-link" ($click)="toggleShowAll()">{{showAllButtonText}}</button>
+    <button class="btn btn-small btn-link btn-link-nopadding" ($click)="toggleShowAll()">{{showAllButtonText}}</button>
 {{/if}}
