--- a/src/ggrc/assets/mustache/components/object-list-item/comment-list-item.mustache
+++ b/src/ggrc/assets/mustache/components/object-list-item/comment-list-item.mustache
@@ -7,10 +7,10 @@
       {{#if commentAuthor}}
         <person-list-item {person}="commentAuthor"></person-list-item>
       {{/if}}
-      <span class="comment-object-item__author_info">{{assignee_types commentAuthorType}} added a response - {{localize_date commentCreationDate}}</span>
+      <span class="comment-object-item__author_info">{{assignee_types commentAuthorType}} {{date commentCreationDate}}</span>
     </div>
   {{#if hasRevision}}
-      <h6 class="comment-list__ca-description">{{customAttributeData}}</h6>
+      <div class="comment-list__ca-description">{{customAttributeData}}</div>
   {{/if}}
     <div class="comment-object-item__text">
      <read-more {text}="commentText"></read-more>
