Update Mapped Objects "mapping" attribute definition

--- a/src/ggrc/assets/mustache/assessments/related-assessments-without-reuse.mustache
+++ b/src/ggrc/assets/mustache/assessments/related-assessments-without-reuse.mustache
@@ -67,14 +67,14 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                 <div class="flex-size-3">
                     <mapped-objects
                             {parent-instance}="instance"
-                            mapping="{{instance.class.info_pane_options.evidence.mapping}}">
+                            mapping="all_documents">
                         <document-object-list-item {instance}="instance"></document-object-list-item>
                     </mapped-objects>
                 </div>
                 <div class="flex-size-3">
                     <mapped-objects
                             {parent-instance}="instance"
-                            mapping="{{instance.class.info_pane_options.urls.mapping}}">
+                            mapping="all_urls">
                         <document-object-list-item {instance}="instance"></document-object-list-item>
                     </mapped-objects>
                 </div>
