--- a/src/ggrc/assets/mustache/assessments/related-assessments.mustache
+++ b/src/ggrc/assets/mustache/assessments/related-assessments.mustache
@@ -73,7 +73,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                     <div class="flex-size-3">
                         <mapped-objects
                                 {parent-instance}="instance"
-                                mapping="{{instance.class.info_pane_options.evidence.mapping}}">
+                                mapping="all_documents">
                             <reusable-objects-item {instance}="instance"
                                                    {is-saving}="isSaving"
                                                    {base-instance}="baseInstance"
@@ -87,7 +87,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                     <div class="flex-size-3">
                         <mapped-objects
                                 {parent-instance}="instance"
-                                mapping="{{instance.class.info_pane_options.urls.mapping}}">
+                                mapping="all_urls">
                             <reusable-objects-item {instance}="instance"
                                                    {is-saving}="isSaving"
                                                    {base-instance}="baseInstance"
