--- a/src/ggrc/assets/stylesheets/_components.scss
+++ b/src/ggrc/assets/stylesheets/_components.scss
@@ -35,3 +35,4 @@
 @import "components/auto-save-form/auto-save-form";
 @import "components/attachment-upload-control/attachment-upload-control";
 @import "components/action-toolbar/action-toolbar";
+@import "components/folder-attachments-list/folder-attachments-list";
