--- a/src/ggrc/assets/mustache/controls/info.mustache
+++ b/src/ggrc/assets/mustache/controls/info.mustache
@@ -19,6 +19,17 @@
       {{>'/static/mustache/base_objects/notes.mustache'}}
       {{>'/static/mustache/controls/contacts.mustache'}}
 
+      <div class="row-fluid wrap-row">
+        <div class="span6">
+          <folder-attachments-list title="Evidence"
+                                   sub-label="Evidences"
+                                   deny-no-folder="true"
+                                   instance="instance"
+                                   tooltip="You can upload up to 10 files in a single batch">
+          </folder-attachments-list>
+        </div>
+      </div>
+
       <div class="custom-attr-wrap">
         <div class="row-fluid">
           <div class="span12">
