--- a/src/ggrc/assets/stylesheets/_components.scss
+++ b/src/ggrc/assets/stylesheets/_components.scss
@@ -32,3 +32,4 @@
 @import "components/tree/sub-tree-wrapper";
 @import "components/tree/tree-view";
 @import "components/auto-save-form/auto-save-form";
+@import "components/folder-attachments-list/folder-attachments-list";
