Fix attachments in Control bugs

--- a/src/ggrc/assets/stylesheets/components/mapped-objects/_mapped-objects.scss
+++ b/src/ggrc/assets/stylesheets/components/mapped-objects/_mapped-objects.scss
@@ -179,4 +179,8 @@ assessment-mapped-controls, assessment-mapped-related-information {
     }
   }
 }
+directly-mapped-objects {
+  display: block;
+  width: 250px;
+}
 
