--- a/src/ggrc/assets/mustache/components/folder-attachments-list/folder-attachments-list.mustache
+++ b/src/ggrc/assets/mustache/components/folder-attachments-list/folder-attachments-list.mustache
@@ -7,48 +7,6 @@
     <span class="attachments-list-title">
       {{title}}
     </span>
-    {{#if_helpers '\
-      #unless' instance.snapshot '\
-      and #unless' instance.isRevision}}
-    {{!#unless instance.snapshot}}
-      {{#is_allowed 'update' instance context='for'}}
-        <span class="attachments-list-action" rel="tooltip" data-original-title="{{tooltip}}">
-          {{#with_mapping 'extended_folders' instance}}
-            {{#if extended_folders.length}}
-                <ggrc-gdrive-picker-launcher
-                  icon="plus-circle"
-                  instance="instance"
-                  link_text=" "
-                  click_event="trigger_upload_parent">
-                </ggrc-gdrive-picker-launcher>
-              {{else}}
-                {{#unless denyNoFolder}}
-                  <ggrc-gdrive-picker-launcher
-                    icon="plus-circle"
-                    instance="instance"
-                    link_text=" "
-                    click_event="trigger_upload">
-                  </ggrc-gdrive-picker-launcher>
-                {{/unless}}
-              {{/if}}
-          {{else}}
-            {{! This is a failure state for with_mapping, if something in the mapping doesn't refresh properly }}
-            {{#if error.errors}}
-              <small>
-                You need permission to upload files to the audit folder.
-                <a href="https://drive.google.com/folderview?id={{grdive_msg_to_id error.message}}&amp;usp=sharing#">Request access.</a>
-              </small>
-            {{else}}
-              The GDrive folder for this evidence could not be accessed.
-              {{#using request=parent_instance.request}}
-                {{{render '/static/mustache/gdrive/gapi_errors.mustache' type="file" instance=request error=error}}}
-              {{/using}}
-            {{/if}}
-          {{/with_mapping}}
-        </span>
-      {{/is_allowed}}
-    {{!/unless}}
-    {{/if_helpers}}
 </h6>
 {{#is_allowed 'update' instance context='for'}}
   <ggrc-gdrive-folder-picker hide-label="true"
@@ -64,17 +22,65 @@
   </div>
 {{/if_null}}
 
-{{#if_mapping_ready instance.class.info_pane_options.evidence.mapping instance}}
   {{#if subLabel}}
     <span class="sub-label">
       {{subLabel}}:
     </span>
   {{/if}}
-  <mapping-tree-view
-    parent-instance="instance"
-    mapping="instance.class.info_pane_options.evidence.mapping"
-    item-template="instance.class.info_pane_options.evidence.show_view"
-    empty-text="None"
-  >
-  </mapping-tree-view>
-{{/if_mapping_ready}}
+
+  <directly-mapped-objects items="documents" model-name="Document" parent-instance="instance">
+      <action-toolbar {document}="{.}" class="action-toolbar">
+          <document-object-list-item {instance}="document"></document-object-list-item>
+          {{#if showAction}}
+              <div class="action-toolbar__controls">
+                  {{#if_helpers '\#unless' instance.snapshot '\and #unless' instance.isRevision}}
+                    {{#is_allowed 'update' instance context='for'}}
+                      <action-toolbar-control>
+                          <unmap-button {destination}="instance" {source}="document"
+                                        object-prop="object_documents" mapping-type="ObjectDocument">
+                              <i class="fa fa-trash"></i>
+                          </unmap-button>
+                      </action-toolbar-control>
+                    {{/is_allowed}}
+                  {{/if_helpers}}
+              </div>
+          {{/if}}
+      </action-toolbar>
+  </directly-mapped-objects>
+
+
+{{#if_helpers '\#unless' instance.snapshot '\and #unless' instance.isRevision}}
+    {{#is_allowed 'update' instance context='for'}}
+        <span class="attachments-list-action" rel="tooltip" data-original-title="{{tooltip}}">
+            {{#with_mapping 'extended_folders' instance}}
+                {{#if extended_folders.length}}
+                    <ggrc-gdrive-picker-launcher
+                            instance="instance"
+                            click_event="trigger_upload_parent">
+                        Attach
+                    </ggrc-gdrive-picker-launcher>
+                {{else}}
+                    {{#unless denyNoFolder}}
+                        <ggrc-gdrive-picker-launcher
+                                instance="instance"
+                                click_event="trigger_upload">
+                        </ggrc-gdrive-picker-launcher>
+                    {{/unless}}
+                {{/if}}
+            {{else}}
+            {{! This is a failure state for with_mapping, if something in the mapping doesn't refresh properly }}
+                {{#if error.errors}}
+                    <small>
+                        You need permission to upload files to the audit folder.
+                        <a href="https://drive.google.com/folderview?id={{grdive_msg_to_id error.message}}&amp;usp=sharing#">Request access.</a>
+                    </small>
+                {{else}}
+                    The GDrive folder for this evidence could not be accessed.
+                    {{#using request=parent_instance.request}}
+                        {{{render '/static/mustache/gdrive/gapi_errors.mustache' type="file" instance=request error=error}}}
+                    {{/using}}
+                {{/if}}
+            {{/with_mapping}}
+        </span>
+    {{/is_allowed}}
+{{/if_helpers}}
