Fix attachments in Control bugs

--- a/src/ggrc/assets/stylesheets/components/mapped-objects/_mapped-objects.scss
+++ b/src/ggrc/assets/stylesheets/components/mapped-objects/_mapped-objects.scss
@@ -170,4 +170,8 @@ assessment-mapped-controls, assessment-mapped-related-information {
     font-size: 13px;
   }
 }
+directly-mapped-objects {
+  display: block;
+  width: 250px;
+}
 
