Add readonly options for attachments component. Update of revisionComperer

--- a/src/ggrc/assets/mustache/components/folder-attachments-list/folder-attachments-list.mustache
+++ b/src/ggrc/assets/mustache/components/folder-attachments-list/folder-attachments-list.mustache
@@ -11,7 +11,7 @@
 {{#is_allowed 'update' instance context='for'}}
   <ggrc-gdrive-folder-picker hide-label="true"
                              sub-label="Folder"
-                             readonly="readonlyFolder"
+                             readonly="readonly"
                              instance="instance"
   ></ggrc-gdrive-folder-picker>
 {{/is_allowed}}
@@ -28,12 +28,16 @@
     </span>
   {{/if}}
 
-  <directly-mapped-objects items="documents" model-name="Document" parent-instance="instance">
+  <directly-mapped-objects
+    {(is-attachments-loaded)}="isAttachmentsLoaded"
+    items="documents"
+    model-name="Document"
+    parent-instance="instance">
       <action-toolbar {document}="{.}" class="action-toolbar">
           <document-object-list-item {instance}="document"></document-object-list-item>
           {{#if showAction}}
               <div class="action-toolbar__controls">
-                  {{#if_helpers '\#unless' instance.snapshot '\and #unless' instance.isRevision}}
+                  {{#unless readonly}}
                     {{#is_allowed 'update' instance context='for'}}
                       <action-toolbar-control>
                           <unmap-button {destination}="instance" {source}="document"
@@ -42,14 +46,14 @@
                           </unmap-button>
                       </action-toolbar-control>
                     {{/is_allowed}}
-                  {{/if_helpers}}
+                  {{/unless}}
               </div>
           {{/if}}
       </action-toolbar>
   </directly-mapped-objects>
 
 
-{{#if_helpers '\#unless' instance.snapshot '\and #unless' instance.isRevision}}
+{{#unless readonly}}
     {{#is_allowed 'update' instance context='for'}}
         <span class="attachments-list-action" rel="tooltip" data-original-title="{{tooltip}}">
             {{#with_mapping 'extended_folders' instance}}
@@ -64,6 +68,7 @@
                         <ggrc-gdrive-picker-launcher
                                 instance="instance"
                                 click_event="trigger_upload">
+                                Attach
                         </ggrc-gdrive-picker-launcher>
                     {{/unless}}
                 {{/if}}
@@ -83,4 +88,4 @@
             {{/with_mapping}}
         </span>
     {{/is_allowed}}
-{{/if_helpers}}
+{{/unless}}
