--- a/src/ggrc/assets/mustache/documents/list.mustache
+++ b/src/ggrc/assets/mustache/documents/list.mustache
@@ -28,7 +28,7 @@
   </li>
   {{/list}}
   <li class="tree-item tree-item-add">
-    <a href="javascript://" data-modal-selector-options="object_documents" data-toggle="unified-mapper" data-modal-class="modal-wide" data-original-title="Map Reference Links" data-placement="left" rel="tooltip" title="Map Reference Links to this {{parent_instance.class.shortName}}">
+    <a href="javascript://" data-modal-selector-options="relationsips" data-toggle="unified-mapper" data-modal-class="modal-wide" data-original-title="Map Reference Links" data-placement="left" rel="tooltip" title="Map Reference Links to this {{parent_instance.class.shortName}}">
       + Reference Link
     </a>
   </li>
