Fix attachment list header

--- a/src/ggrc/assets/mustache/components/assessment/attachments-list.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/attachments-list.mustache
@@ -3,7 +3,7 @@
     Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
 }}
 
-<h6>Evidence</h6>
+<h6>Evidence &amp; URLs</h6>
 <mapped-objects {visible-items}="limit" {parent-instance}="instance" mapping="all_documents" {empty-message}="noItemsText">
     <action-toolbar {document}="instance" class="action-toolbar">
         <document-object-list-item class="action-toolbar__content-item" {instance}="document"></document-object-list-item>
