Fix attach file button

--- a/src/ggrc_gdrive_integration/assets/mustache/responses/gdrive_upload_evidence.mustache
+++ b/src/ggrc_gdrive_integration/assets/mustache/responses/gdrive_upload_evidence.mustache
@@ -19,6 +19,7 @@
 <div>
   <br>
   <ggrc-gdrive-picker-launcher instance="instance" deferred="true" click_event="trigger_upload_parent">
+    Attach
   </ggrc-gdrive-picker-launcher>
 </div>
 {{/if_helpers}}
