--- a/src/ggrc_risk_assessments/assets/mustache/risk_assessments/info.mustache
+++ b/src/ggrc_risk_assessments/assets/mustache/risk_assessments/info.mustache
@@ -35,6 +35,7 @@
         </mapping-tree-view>
         {{#is_allowed 'update'}}
           <ggrc-gdrive-picker-launcher instance="instance" link_text="Attach supporting file" click_event="trigger_upload">
+            Attach
           </ggrc-gdrive-picker-launcher>
         {{/is_allowed}}
       </div>
