--- a/src/ggrc_workflows/assets/mustache/cycle_task_entries/tree.mustache
+++ b/src/ggrc_workflows/assets/mustache/cycle_task_entries/tree.mustache
@@ -28,6 +28,7 @@
         <div class="oneline">
           {{#if workflowFolder}}
             <ggrc-gdrive-picker-launcher instance="instance" link_text="Attach supporting file" link_class="entry-attachment tree-item-add" click_event="trigger_upload_parent">
+              Attach
             </ggrc-gdrive-picker-launcher>
           {{else}}
             <small class="error-inline">
